# RustBuddyAI

./: .gitignore  Readme.md  b.bat  r.bat
buddy/: Cargo.toml  config.example.toml  config.toml
buddy/scripts/: build_windows.ps1  build_windows.sh  fetch_whisper_model.ps1  setup_vosk_windows.sh
buddy/src/: audio.rs  config.rs  executor.rs  feedback.rs  hotkey.rs  intent.rs  main.rs  transcription.rs  windows_api.rs
scripts/: ensure_deepseek.ps1  ensure_whisper_model.ps1
