[package]
name = "buddy"
version = "0.1.0"
edition = "2021"  # Changed from 2024

[dependencies]
cpal = "0.15"
num_cpus = "1.16"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Power",
    "Win32_System_Shutdown",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
] }
rodio = "0.17"
whisper-rs = "0.11"

[target.'cfg(windows)'.dependencies]
tts = "0.26"
